Pandoc / markdown thesis template for UCD
- pandoc template in default.thesis (based on default.latex)

- revise chapter workflow so that you specify titles separately (this makes
it easier to pull in outside chapters).

- use pandoc-crossref but NOT citeproc.  Note, though that this does NOT work
with subfigure syntax in pandoc-crossref as that collides with our use of
subcaption

--- a/.gitignore
+++ b/.gitignore
@@ -1,36 +1,16 @@
-# Created by https://www.gitignore.io
-
-### LaTeX ###
-*.acn
-*.acr
-*.alg
+.DS_Store
+.*.swp
 *.aux
 *.bbl
+*.bcf
 *.blg
-*.dvi
 *.fdb_latexmk
-*.glg
-*.glo
-*.gls
-*.idx
-*.ilg
-*.ind
-*.ist
+*.fls
 *.lof
 *.log
 *.lot
-*.maf
-*.mtc
-*.mtc0
-*.nav
-*.nlo
 *.out
-*.pdfsync
-*.ps
-*.snm
-*.synctex.gz
+*.pdf
+*.run.xml
 *.toc
-*.vrb
-*.xdy
-*.tdo
-
+*.tex
